Bug 201850 - When previews are enabled Dolphin ignores individual folder icons and always uses the standard icon (with the preview images on it)
Summary: When previews are enabled Dolphin ignores individual folder icons and always ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 207879 208507 211311 217172 228222 248354 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-07-29 04:14 UTC by Janet
Modified: 2010-08-19 15:29 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Proposed patch (1015 bytes, patch)
2010-01-20 04:22 UTC, Dario Andres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2009-07-29 04:14:10 UTC
Version:            (using KDE 4.2.96)
OS:                Linux
Installed from:    Debian testing/unstable Packages

For about half the folders in my home directory I define individual folder icons to quickly recognize them, e.g. use colored folders or folders which refer to the content of the folder. Alas these individual icons are completely ignored by dolphin. When I refresh the directory view they are shown but then the preview feature comes in and the folder icons change to blue standard folder with previews on it. 

What I expect is that either the individual folder icon is displayed with the preview icons on it or the individual folder icon is displayed and the previews are not displayed at all for those folders with individual icons (preferably). That's the bug part.

Would be nice to be able to turn that preview feature off for single folders though (folder settings).
Comment 1 Tanja Schulte 2009-08-02 20:57:20 UTC
I think this one and Bug 151932 can go together?
Comment 2 Frank Reininghaus 2009-09-19 17:48:50 UTC
*** Bug 207879 has been marked as a duplicate of this bug. ***
Comment 3 FiNeX 2009-09-26 21:06:49 UTC
*** Bug 208507 has been marked as a duplicate of this bug. ***
Comment 4 Frank Reininghaus 2009-10-21 14:30:05 UTC
*** Bug 211311 has been marked as a duplicate of this bug. ***
Comment 5 Dario Andres 2010-01-20 03:35:51 UTC
I wonder if this should be addressed in the folder thumbnail generator...
Comment 6 Dario Andres 2010-01-20 03:35:58 UTC
*** Bug 217172 has been marked as a duplicate of this bug. ***
Comment 7 Dario Andres 2010-01-20 04:22:50 UTC
Created attachment 40068 [details]
Proposed patch

This is only going to work for local folder.. so I need that confirmation. Otherwise, the patch needs to be adapted somehow.
Comment 8 Peter Penz 2010-01-20 11:25:30 UTC
Thanks Dario for the patch! Would it be possible that you submit this patch at http://reviewboard.kde.org? I'm wondering whether tempDirectory.setScheme("file") is really the way to go or whether there is a nicer way to do this. I'm sure people like David Faure have a good answer for this...
Comment 9 Dario Andres 2010-01-20 13:54:18 UTC
I added to the CC the person which worked on the directory thumbnails, hoping to get an answer... but well.. I could move this to reviewboard.
Comment 10 Dario Andres 2010-01-20 14:43:37 UTC
Done: http://reviewboard.kde.org/r/2658/
Comment 11 Dario Andres 2010-01-26 12:18:08 UTC
SVN commit 1080527 by darioandres:

- Implement http://reviewboard.kde.org/r/2658/
  - Honor the possible custom folder icon in the Folder preview (thumbnail kioslave)

BUG: 201850


 M  +7 -1      thumbnail.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1080527
Comment 12 Dario Andres 2010-02-23 18:56:49 UTC
*** Bug 228222 has been marked as a duplicate of this bug. ***
Comment 13 Frank Reininghaus 2010-08-19 15:29:58 UTC
*** Bug 248354 has been marked as a duplicate of this bug. ***