- Implement http://reviewboard.kde.org/r/2658/   - Honor the possible custom folder icon in the Folder preview (thumbnail kioslave)

BUG: 201850

svn path=/trunk/KDE/kdebase/runtime/; revision=1080527